# ionclaw

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-ios.yml  ios.yml
apps/android/app/: build.gradle.kts  settings.gradle.kts
apps/android/app/gradle/: libs.versions.toml
apps/android/app/gradle/wrapper/: gradle-wrapper.properties
apps/android/app/src/main/: AndroidManifest.xml
apps/apple/Shared/Sources/Platform/: PlatformBridge.swift
apps/apple/Shared/Sources/Server/: ServerController.swift
apps/apple/Shared/Sources/Theme/: Theme.swift
apps/apple/Shared/Sources/UI/: ServerStatusView.swift
apps/apple/iOS/Sources/: PanelView.swift  ServerView.swift
apps/flutter/plugin/: pubspec.yaml
apps/flutter/plugin/android/: build.gradle
apps/flutter/runner/: pubspec.yaml
apps/web/: .prettierignore  .prettierrc.json  eslint.config.js  package.json
apps/web/public/: sw.js
apps/web/src/: App.vue  main.js
apps/web/src/assets/: main.css
apps/web/src/components/chat/: ChatInput.vue  ChatMessages.vue  SessionList.vue
apps/web/src/components/common/: AppSidebar.vue  DynamicForm.vue
apps/web/src/components/files/: FileDownload.vue  FileTree.vue  MarkdownEditor.vue  MediaPreview.vue  TextEditor.vue
apps/web/src/components/tasks/: TaskCard.vue  TaskColumn.vue
apps/web/src/composables/: useApi.js
apps/web/src/layouts/: DefaultLayout.vue
apps/web/src/pages/: ChatPage.vue  FilesPage.vue  LoginPage.vue  MarketplacePage.vue  SchedulerPage.vue  SettingsPage.vue  SkillsPage.vue  TaskBoard.vue  ToolsPage.vue
apps/web/src/stores/: channels.js  chat.js  tasks.js  websocket.js
apps/web/src/utils/: format.js
cmake/cpm/: cpm-dependency.cmake  openssl.cmake
docs/: about.md  android.md  api.md  apple.md  architecture.md  build.md  installation.md  tools.md
main/lib/include/ionclaw/agent/: AgentLoop.hpp  AnnounceQueue.hpp  Classifier.hpp  Compaction.hpp  ContextBuilder.hpp  ContextWindow.hpp  HookRunner.hpp  Orchestrator.hpp  SkillsLoader.hpp  SubagentRegistry.hpp
main/lib/include/ionclaw/bus/: Events.hpp  MessageBus.hpp  SessionQueue.hpp
main/lib/include/ionclaw/channel/: ChannelManager.hpp  TelegramRunner.hpp
main/lib/include/ionclaw/config/: Config.hpp  ConfigLoader.hpp
main/lib/include/ionclaw/cron/: CronParser.hpp  CronService.hpp  CronTypes.hpp
main/lib/include/ionclaw/heartbeat/: HeartbeatService.hpp
(+156 files in other folders)
